--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,10 @@ dependencies {
 
     implementation("androidx.room:room-runtime:2.4.2")
     annotationProcessor("androidx.room:room-compiler:2.4.2")
+
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.1.2'
+
+
 }
